调整大小写&支持demo

--- a/conf/conf_online.ini
+++ b/conf/conf_online.ini
@@ -2,7 +2,7 @@
 network=tcp
 port=11900
 
-[log]
+[Log]
 ; LogPath : /home/logs/
 LogPath=/home/logs/odin/odin.log
 ; level :DEBUG/INFO/WARNING/ERROR
@@ -21,7 +21,7 @@ Retention=48
 status=off
 ;Registry Address
 addrs=10.10.10.11:2181 10.10.10.12:2181 10.10.10.13:2181
-basePath=/xes_xueyan_hudong
+basePath=/tal_tech
 updateInterval=1m
 group=online
 
