--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -2,7 +2,7 @@
 network=tcp
 port=11900
 
-[log]
+[Log]
 ; LogPath : /home/logs/
 LogPath=/home/logs/odin/odin.log
 ; level :DEBUG/INFO/WARNING/ERROR
@@ -22,7 +22,7 @@ status=off
 
 ;Registry Address
 addrs=127.0.0.1:2181
-basePath=/odin_demo
+basePath=/tal_tech
 updateInterval=1m
 
 [Expvar]
