依赖组件升级&日志配置小写

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -4,17 +4,17 @@ port=11900
 
 [Log]
 ; LogPath : /home/logs/
-LogPath=/home/logs/odin/odin.log
+logPath=/home/logs/odin/odin.log
 ; level :DEBUG/INFO/WARNING/ERROR
-Level=DEBUG
+level=DEBUG
 ; RotateLines 1K/1M
-RotateLines=0K
+rotateLines=0K
 ; RotateSize 1M/1G
-RotateSize=0M
-; RotateDaily true/false
-RotateHourly=true
+rotateSize=0M
+; RotateHourly true/false
+rotateHourly=true
 ; Retention
-Retention=48
+retention=48
 
 
 [Registry]
